Fixed spacing hope it works

--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ body {
   line-height: 1.1;
   margin: 30px 0 15px 0;
 }
+.content-text h1,
+.content-text h2,
+.content-text h3 {
+  margin-top: 50px;
+}
 .content-text p {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
